--- a/TODO
+++ b/TODO
@@ -3,6 +3,8 @@
 
 - php code sniffer (phpcs для phpstorm)
 
+- Почитай пожалуйста, как в PHP работают сессии
+
 - Закрыть все страницы авторизацией.
   Если пользователь не авторизовался - мы показываем ему ошибку "Тебе тут не рады" и даем ссылку на страницу с формой авторизации.
   На странице с формой авторизации пользователю предлагают ввести логин и пароль.
