--- a/TODO
+++ b/TODO
@@ -26,3 +26,9 @@
          К нему в конструктор (!!!) передается конфиг app.php.
          После чего, в index.php вызывается метод run() объекта Application.
          В ходе работы метода run должен запуститься роутер и отработать, как и раньше.
+Сделано: - Закрыть все страницы авторизацией.
+         Если пользователь не авторизовался - мы показываем ему ошибку "Тебе тут не рады" и даем ссылку на страницу с формой авторизации.
+         На странице с формой авторизации пользователю предлагают ввести логин и пароль.
+         Логин и пароль должны храниться в конфиге.
+         Пользователей должно быть несколько (3)
+         Авторизованная сессия должна протухать через 5 минут
