Консольное приложение. День первый.

--- a/TODO.txt
+++ b/TODO.txt
@@ -10,6 +10,7 @@
 - результат должен быть красным
 
 *Не сейчас*
+- обработка исключений и логирование
 - phpUnit почитать
 - трекер задач
 - Работа с базами данных (пользователи и авторизация)
