Консольное приложение. Финал.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,8 @@
 -------- TO DO --------
 - Почистить код - это дейлик. :)
 
-- php code sniffer (phpcs для phpstorm)
-
-- Переделать Template Engine
-
-- Добавить возможность работать из консоли
-- php dk calculate $value1 $operation $value2
-- результат должен быть красным
+*Сейчас*
+- PSR 11
 
 *Не сейчас*
 - обработка исключений и логирование
@@ -15,8 +10,13 @@
 - трекер задач
 - Работа с базами данных (пользователи и авторизация)
 
+*Для общего развития*
+- php code sniffer (phpcs для phpstorm)
+
 
 -------- УЖЕ DO --------
-- Переделать ConfigDTO
-- Каждому классу по интерфейсу
-- DI Container
+- Переделать Template Engine (частично)
+
+- Добавить возможность работать из консоли
+- php dk calculate $value1 $operation $value2
+- результат должен быть красным
