--- a/TODO.txt
+++ b/TODO.txt
@@ -2,10 +2,24 @@
 - Почистить код - это дейлик. :)
 
 *Сейчас*
-- PSR 11
+1. Конфиг должен лежать не в движке, а в приложении. То что касается движка остается в движке.
+        То что касается приложения, разрабатываемого на движке, должно переехать в корень проекта.
+
+3. Перелопатить Engine\Services. Все должно быть раскидано по папкам по логике.
+
+5. Нужно отрефакторить Calculations и сделать его более правильным с точки зрения хранения и обработки информации.
+
+7. Routers должен стать абстрактным. Предлагаю порефакторить роутеры. Попробовать выделить общую часть и разные реализации для веба и консоли.
+8. Продумать, какие изменения нужно внести, чтобы у тебя калькулятор получал не операцию типа 1 + 1, а,
+        например, более сложную -  1+1+1. Подумать, как можно упростить твою модель для более простого расширения.
+
+N. Почитай про подход git-flow и про merge request'ы gitlab: https://danielkummer.github.io/git-flow-cheatsheet/index.ru_RU.html
 
 *Не сейчас*
-- обработка исключений и логирование
+9. Замени все выводы типа echo "Какая-то ошибка" на выброс исключений (изучи какие бывают исключения в нативном PHP).
+Исключения должны где-то обрабатываться в движке и при их обработке уже должны выводиться ошибки пользователю в браузере или консоли.
+В качестве примера попробуй выбрасывать исключения из контроллеров в случае каких-либо ошибок
+
 - phpUnit почитать
 - трекер задач
 - Работа с базами данных (пользователи и авторизация)
@@ -15,8 +29,12 @@
 
 
 -------- УЖЕ DO --------
-- Переделать Template Engine (частично)
+- PSR 11
 
-- Добавить возможность работать из консоли
-- php dk calculate $value1 $operation $value2
-- результат должен быть красным
+- BaseApp должен стать абстрактным. Ведь по логике от него не должно быть возможности создать объект.
+          Он просто инкапсулирует в себе общую логику для всех видов приложений.
+
+- Избавься от Warning при обращении к незарегистрированному web роуту.
+
+- Для сохранения истории (основной и сессионной) используй декоратор (паттерн проектирования).
+          Почитай доку, посмотри примеры.
