--- a/TODO.txt
+++ b/TODO.txt
@@ -1,25 +1,21 @@
 -------- TO DO --------
 - Почистить код - это дейлик. :)
+- DRY - Dont repeat uself
+- YAGNI - Не днлай сверх требований
 
 *Сейчас*
-1. Конфиг должен лежать не в движке, а в приложении. То что касается движка остается в движке.
-        То что касается приложения, разрабатываемого на движке, должно переехать в корень проекта.
+0. Почитай про подход git-flow и про merge request'ы gitlab: https://danielkummer.github.io/git-flow-cheatsheet/index.ru_RU.html
 
-3. Перелопатить Engine\Services. Все должно быть раскидано по папкам по логике.
-
-5. Нужно отрефакторить Calculations и сделать его более правильным с точки зрения хранения и обработки информации.
-
-7. Routers должен стать абстрактным. Предлагаю порефакторить роутеры. Попробовать выделить общую часть и разные реализации для веба и консоли.
 8. Продумать, какие изменения нужно внести, чтобы у тебя калькулятор получал не операцию типа 1 + 1, а,
-        например, более сложную -  1+1+1. Подумать, как можно упростить твою модель для более простого расширения.
+    например, более сложную -  1+1+1.
+    Подумать, как можно упростить твою модель для более простого расширения.
+    Реализовать поддержку твоим приложением и простых, и сложных вычислений ^_^
 
-N. Почитай про подход git-flow и про merge request'ы gitlab: https://danielkummer.github.io/git-flow-cheatsheet/index.ru_RU.html
+9. Замени все выводы типа echo "Какая-то ошибка" на выброс исключений (изучи какие бывают исключения в нативном PHP).
+    Исключения должны где-то обрабатываться в движке и при их обработке уже должны выводиться ошибки пользователю в браузере или консоли.
+    В качестве примера попробуй выбрасывать исключения из контроллеров в случае каких-либо ошибок
 
 *Не сейчас*
-9. Замени все выводы типа echo "Какая-то ошибка" на выброс исключений (изучи какие бывают исключения в нативном PHP).
-Исключения должны где-то обрабатываться в движке и при их обработке уже должны выводиться ошибки пользователю в браузере или консоли.
-В качестве примера попробуй выбрасывать исключения из контроллеров в случае каких-либо ошибок
-
 - phpUnit почитать
 - трекер задач
 - Работа с базами данных (пользователи и авторизация)
@@ -27,6 +23,12 @@ N. Почитай про подход git-flow и про merge request'ы gitlab
 *Для общего развития*
 - php code sniffer (phpcs для phpstorm)
 
+------- ПОЛУ DO --------
+
+- Предлагаю порефакторить роутеры. Попробовать выделить общую часть и разные реализации для веба и консоли.
+* Попробовал, получается нечитаемо.
+* Приходится закидывать в наследуемый (или родительский, в зависимости от реализации) класс методы для одной строчки.
+* Код становится более сложным и менее лаконичным ИМХО. Спросить у Вовы.
 
 -------- УЖЕ DO --------
 - PSR 11
@@ -38,3 +40,12 @@ N. Почитай про подход git-flow и про merge request'ы gitlab
 
 - Для сохранения истории (основной и сессионной) используй декоратор (паттерн проектирования).
           Почитай доку, посмотри примеры.
+
+- Перелопатить Engine\Services. Все должно быть раскидано по папкам по логике.
+
+- Конфиг должен лежать не в движке, а в приложении. То что касается движка остается в движке.
+  То что касается приложения, разрабатываемого на движке, должно переехать в корень проекта.
+
+- Нужно отрефакторить Calculations и сделать его более правильным с точки зрения хранения и обработки информации.
+
+- Routers должен стать абстрактным.
