--- a/TODO.txt
+++ b/TODO.txt
@@ -3,8 +3,11 @@
 - DRY - Dont repeat yourself
 - YAGNI - Не добавляй функциональность, в которой нет непосредственной надобности
 
-*Сейчас* вцвцв
-0. Почитай про подход git-flow и про merge request'ы gitlab: https://danielkummer.github.io/git-flow-cheatsheet/index.ru_RU.html
+*Сейчас*
+- Для сохранения истории (основной и сессионной) используй декоратор (паттерн проектирования).
+          Почитай доку, посмотри примеры.
+- Конфиг должен лежать не в движке, а в приложении. То что касается движка остается в движке.
+  То что касается приложения, разрабатываемого на движке, должно переехать в корень проекта.
 
 8. Продумать, какие изменения нужно внести, чтобы у тебя калькулятор получал не операцию типа 1 + 1, а,
     например, более сложную -  1+1+1.
@@ -14,14 +17,17 @@
 9. Замени все выводы типа echo "Какая-то ошибка" на выброс исключений (изучи какие бывают исключения в нативном PHP).
     Исключения должны где-то обрабатываться в движке и при их обработке уже должны выводиться ошибки пользователю в браузере или консоли.
     В качестве примера попробуй выбрасывать исключения из контроллеров в случае каких-либо ошибок
+    Error Handler
 
 *Не сейчас*
 - phpUnit почитать
 - трекер задач
 - Работа с базами данных (пользователи и авторизация)
 
+
 *Для общего развития*
 - php code sniffer (phpcs для phpstorm)
+- glob, tags in container
 
 ------- ПОЛУ DO --------
 
@@ -38,14 +44,10 @@
 
 - Избавься от Warning при обращении к незарегистрированному web роуту.
 
-- Для сохранения истории (основной и сессионной) используй декоратор (паттерн проектирования).
-          Почитай доку, посмотри примеры.
-
 - Перелопатить Engine\Services. Все должно быть раскидано по папкам по логике.
-
-- Конфиг должен лежать не в движке, а в приложении. То что касается движка остается в движке.
-  То что касается приложения, разрабатываемого на движке, должно переехать в корень проекта.
 
 - Нужно отрефакторить Calculations и сделать его более правильным с точки зрения хранения и обработки информации.
 
 - Routers должен стать абстрактным.
+
+- Почитай про подход git-flow и про merge request'ы gitlab: https://danielkummer.github.io/git-flow-cheatsheet/index.ru_RU.html
