Начало работы над конфигом. Изменен ТУДУ

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,15 +4,12 @@
 - YAGNI - Не добавляй функциональность, в которой нет непосредственной надобности
 
 *Сейчас*
+
+
 - Для сохранения истории (основной и сессионной) используй декоратор (паттерн проектирования).
           Почитай доку, посмотри примеры.
 - Конфиг должен лежать не в движке, а в приложении. То что касается движка остается в движке.
   То что касается приложения, разрабатываемого на движке, должно переехать в корень проекта.
-
-8. Продумать, какие изменения нужно внести, чтобы у тебя калькулятор получал не операцию типа 1 + 1, а,
-    например, более сложную -  1+1+1.
-    Подумать, как можно упростить твою модель для более простого расширения.
-    Реализовать поддержку твоим приложением и простых, и сложных вычислений ^_^
 
 9. Замени все выводы типа echo "Какая-то ошибка" на выброс исключений (изучи какие бывают исключения в нативном PHP).
     Исключения должны где-то обрабатываться в движке и при их обработке уже должны выводиться ошибки пользователю в браузере или консоли.
@@ -21,7 +18,7 @@
 
 *Не сейчас*
 - phpUnit почитать
-- трекер задач
+
 - Работа с базами данных (пользователи и авторизация)
 
 
@@ -37,17 +34,11 @@
 * Код становится более сложным и менее лаконичным ИМХО. Спросить у Вовы.
 
 -------- УЖЕ DO --------
-- PSR 11
 
-- BaseApp должен стать абстрактным. Ведь по логике от него не должно быть возможности создать объект.
-          Он просто инкапсулирует в себе общую логику для всех видов приложений.
+- Продумать, какие изменения нужно внести, чтобы у тебя калькулятор получал не операцию типа 1 + 1, а,
+    например, более сложную -  1+1+1.
+    Подумать, как можно упростить твою модель для более простого расширения.
+    Реализовать поддержку твоим приложением и простых, и сложных вычислений ^_^
 
-- Избавься от Warning при обращении к незарегистрированному web роуту.
-
-- Перелопатить Engine\Services. Все должно быть раскидано по папкам по логике.
-
-- Нужно отрефакторить Calculations и сделать его более правильным с точки зрения хранения и обработки информации.
-
-- Routers должен стать абстрактным.
-
-- Почитай про подход git-flow и про merge request'ы gitlab: https://danielkummer.github.io/git-flow-cheatsheet/index.ru_RU.html
+- Завести аккаунт youtrack или любом другом треккере задач.
+  Все имеющиеся у тебя задачи добавить как отдельные задачи и позвать меня на всё готовое.
