--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,7 @@
 - DRY - Dont repeat yourself
 - YAGNI - Не добавляй функциональность, в которой нет непосредственной надобности
 
-*Сейчас*  ыыыаав
+*Сейчас*  ыыыаавdfsdf
 
 
 - Для сохранения истории (основной и сессионной) используй декоратор (паттерн проектирования).
