--- a/TODO.txt
+++ b/TODO.txt
@@ -3,8 +3,7 @@
 - DRY - Dont repeat yourself
 - YAGNI - Не добавляй функциональность, в которой нет непосредственной надобности
 
-*Сейчас* rhdfghdfghdfhgdfgh
-
+*Сейчас* rhdfg
 
 - Для сохранения истории (основной и сессионной) используй декоратор (паттерн проектирования).
           Почитай доку, посмотри примеры.
